# github-globe

./: .gitignore  Pipfile  README.md  global_usage.json  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  create.yml  test.yml
